--- a/ecommerce/templates/index.html
+++ b/ecommerce/templates/index.html
@@ -7,10 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class='bg-[#FFEAA7]'>
+<body class='bg-[#3D3B40]'>
     <div class="container space-y-2">
-        <h1 class='text-center text-5xl font-bold'>Showing data of {{ item_id }}</h1>
-        <table class="table table-striped table-hover rounded-xl border bg-white">
+        <h1 class='text-center text-5xl font-bold text-white'>Showing data of {{ item_id }}</h1>
+        <table class="table table-striped table-hover rounded-xl bg-white">
             <thead>
                 <tr>
                     <th>ID</th>
